cha-pre-live-flux2/cha-eks-5b/namespaces/alrthb-staging/namespace-alrthb-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: alrthb-staging
  name: alrthb-staging
